--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: ironladyback_development
+  database: corona_market_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: ironladyback
+  #username: corona_market
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: ironladyback_test
+  database: corona_market_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: ironladyback_production
-  username: ironladyback
-  password: <%= ENV['IRONLADYBACK_DATABASE_PASSWORD'] %>
+  database: corona_market_production
+  username: corona_market
+  password: <%= ENV['CORONA_MARKET_DATABASE_PASSWORD'] %>
